# find_job_with_python

./: README.md  calculator.py  days.py  indeed.py  jobs.csv  main.py  pyproject.toml  save.py  sof.py
